# settlement_patches

./: README.md  plots.ipynb
blob/: CMakeLists.txt  README.md  admin_patch.cpp  admin_patch.h  admin_patch_test.cpp  cgal_tutorial.cpp  component_data.h  connected_settlements.h  gdal_raster.cpp  gdal_raster.h  gdal_raster_test.cpp  gdal_vector.cpp  gdal_vector.h  gdal_vector.md  main.cpp  metis_io.cpp  metis_io.h  on_demand_raster.cpp  on_demand_raster.h  patch_graph.h  pixel.h  projection.cpp  projection.h  projection_test.cpp  read_tiff.h  shapefile.h  simple_patches.h  simple_patches_test.cpp  sparse_settlements.cpp  sparse_settlements.h  sparse_settlements_test.cpp  split_patches.cpp  split_patches.h
data/: Makefile
